@@ -90,6 +90,7 @@ void                e_cal_model_set_use_24_hour_format (ECalModel *model, gboole
 CalClient          *e_cal_model_get_default_client (ECalModel *model);
 void                e_cal_model_set_default_client (ECalModel *model, CalClient *client);
 GList              *e_cal_model_get_client_list (ECalModel *model);
+CalClient          *e_cal_model_get_client_for_uri (ECalModel *model, const char *uri);
 void                e_cal_model_add_client (ECalModel *model, CalClient *client);
 void                e_cal_model_remove_client (ECalModel *model, CalClient *client);
 void                e_cal_model_remove_all_clients (ECalModel *model);
