@@ -106,6 +106,7 @@ ECalendarTable *gnome_calendar_get_task_pad	(GnomeCalendar *gcal);
 
 ECalModel *gnome_calendar_get_calendar_model    (GnomeCalendar *gcal);
 CalClient *gnome_calendar_get_default_client    (GnomeCalendar *gcal);
+void       gnome_calendar_set_default_client    (GnomeCalendar *gcal, CalClient *client);
 CalClient *gnome_calendar_get_task_pad_cal_client(GnomeCalendar *gcal);
 
 gboolean   gnome_calendar_open                  (GnomeCalendar *gcal, const char *str_uri);
